Fix right align bug

--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -24,7 +24,7 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 32px;
-  margin-left: 0px;
-  margin-right: auto;
+  margin-left: auto;
+  margin-right: 0px;
   
 }
